zero-schema-macros/tests/ui/fail/66_optional_fixed_bytes.rs
use zero_schema_macros::zero;

#[zero]
struct Invalid {
    value: Option<&'static [u8; 2]>,
}

fn main() {}
